--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "browser-sync": "^2.26.14",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "undertaker": "^1.3.0"
   },
   "browserslist": [
@@ -22,7 +28,5 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-  ],
-  "dependencies": {},
-  "description": ""
+  ]
 }
